# opengl-cubes

./: .gitattributes  Cargo.toml  README.md
screenshots/: 2025-04-02 08-18-15.mkv
src/: Todo.txt  camera.rs  chunk.rs  entity.rs  main.rs  mesh.rs  octree.rs  octree_arr.rs  ray.rs  ray_arr.rs  shader.rs  utils.rs  vertex.rs
src/shaders/: clear_texture.comp  dda_brick.comp  dda_ray.comp  draw_entities.comp  draw_entity.comp  fragment_shader.glsl  octree_ray.comp  pure_color_alpha.frag  pure_color_fr.glsl  screen.vert  texturing.frag  uv_passthrough.vert  vertex_shader.glsl
